# ElastoPlasticQPot

./: .gitignore  CMakeLists.txt  ElastoPlasticQPot.pc.in  ElastoPlasticQPotConfig.cmake.in  README.md  setup.py
develop/: CMakeLists.txt  Cartesian2d.cpp  Cartesian2d.py
docs/theory/: readme.tex
docs/theory/figures/: stress-strain.py
include/ElastoPlasticQPot/: .gitignore  Cartesian2d.h  Cartesian2d.hpp  Cartesian2d_Cusp.hpp  Cartesian2d_Elastic.hpp  Cartesian2d_Matrix.hpp  Cartesian2d_Smooth.hpp  ElastoPlasticQPot.h  python.cpp
include/xElastoPlasticQPot/: Cartesian2d.h  Cartesian2d.hpp  Cartesian2d_Cusp.hpp  Cartesian2d_Elastic.hpp  Cartesian2d_Matrix.hpp  Cartesian2d_Smooth.hpp  ElastoPlasticQPot.h  python.cpp
python/: python_interface.cpp  setup.py
src/: CMakeLists.txt  ElastoPlasticQPot.pc.in
src/ElastoPlasticQPot/: Cartesian2d.cpp  Cartesian2d.h  Cartesian2d.hpp  Cartesian2d_Cusp.cpp  Cartesian2d_Cusp.hpp  Cartesian2d_Elastic.cpp  Cartesian2d_Matrix.cpp  Cartesian2d_Matrix.hpp  Cartesian2d_Smooth.cpp  Cartesian2d_Smooth.hpp  ElastoPlasticQPot.h  python.cpp
